--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
+    "firebase": "^12.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^6.26.0",
-    
-    "@mui/material": "^6.1.0",
-    "@mui/icons-material": "^6.1.0",
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0"
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
